# gndp

./: MODULE.bazel  README.md  WORKSPACE  regenerate-files.sh
proto/: BUILD.bazel  gndp.proto
proto/gndp/: gndp.pb.go
