# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
module(
    name = "gndp",
    version = "1.0",
)

bazel_dep(name = "gazelle", version = "0.37.0")
bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5")
bazel_dep(name = "grpc", version = "1.63.1")
bazel_dep(name = "protobuf", version = "27.1")
bazel_dep(name = "rules_go", version = "0.48.0")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0-alpha2")
