# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# gNDP defines a gRPC-based neighbor discovery protocol implemented on
# vendor network elements. It provides mechanisms for advertising data to
# neighbors.
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")



package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

proto_library(
    name = "gndp_proto",
    srcs = ["gndp.proto"],
)

go_proto_library(
    name = "gndp_go_proto",
    importpath = "github.com/openconfig/gndp/proto/gndp",
    proto = ":gndp_proto",
)

go_library(
    name = "gndp",
    embed = [":gndp_go_proto"],
    importpath = "github.com/openconfig/gndp/proto/gndp",
)
